--- a/index.html
+++ b/index.html
@@ -44,12 +44,8 @@
     </figcaption>
   </figure>
   <p>
-    A computer case, otherwise called a computer chassis, tower, system unit, cabinet, base unit, or simply case, is the fenced in area 
-    that contains the greater part of the components of a computer (more often not including the display, keyboard, and mouse). The 
-    material usually used to create cases are SECC—Steel, electrogalvanized (created by applying zinc and strip by electrodeposition), 
-    icy moved, curl, or aluminum. Plastic is some of the time utilized, and different materials, for instance, glass, wood and even 
-    Lego blocks have showed up in do it yourself or home-built cases. The computer case protects and holds together all the pieces that 
-    are mandatory for a computer to function.
+    A computer case is the fenced in area that contains the greater part of the components of a computer, such as the RAM and hard drive. 
+    The computer case protects and holds together all the pieces that are mandatory for a computer to function.
   </p>
   <hr>
   <h3>Central Processing Unit</h3>
@@ -100,11 +96,10 @@
     </figcaption>
   </figure>
   <p>
-    A computer fan is any fan inside, or attached to, a computer case used for active cooling, and may refer to fans that draw cooler 
-    air into the case from the outside, expel warm air from inside, or move air across a heatsink to cool a particular component. As 
-    processors, graphics cards, RAM and other components in computers have increased in speed and power consumption, the amount of heat 
-    produced by these components as a side-effect of normal operation has also increased. These components need to be kept within a 
-    specified temperature range to prevent overheating, instability, malfunction and damage leading to a shortened component lifespan.
+    A computer fan is any fan inside, or attached to, a computer case used for active cooling. As processors, graphics cards, RAM and 
+    other components in computers have increased in speed and power consumption, the amount of heat produced by these components as a 
+    side-effect has also increased. These components need to be kept within a specified temperature range to prevent overheating, 
+    instability, malfunction and damage leading to a shortened lifespan.
   </p>
   <hr>
   <h3>Motherboard</h3>
@@ -121,10 +116,9 @@
   </figure>
   <p>
     The motherboard holds the CPU, memory chips (RAM and ROM), development spaces, control connectors and some other microchips 
-    required for the PC to work. On the other hand alluded to as the mainboard, mboard, mobo, mobd, backplane load up, base load up, 
-    fundamental circuit load up, planar load up, framework load up, or a rationale load up on Macintosh PCs. The motherboard is a 
-    printed circuit board that is the establishment of a PC, situated on the posterior or at the base of the PC undercarriage. It 
-    dispenses control and enables correspondence to the CPU, Slam, and all other PC equipment parts. 
+    required for the PC to work. The motherboard is also sometimes referred to as the mainboard, mboard, mobo, mobd, or a rationale load
+    up on Macintosh PCs. The motherboard is a printed circuit board that is the establishment of a PC, situated on the posterior or at 
+    the base of the PC undercarriage. It dispenses control and enables correspondence to the CPU, RAM, and all other PC equipment parts. 
   </p>
   <hr>
   <h3>Riser Card</h3>
@@ -165,13 +159,22 @@
     </figcaption>
   </figure>
   <p>
-    RAM is utilized as a method for briefly saving data utilized by different segments of a PC. Any data inside RAM will be lost when a 
-    PC is reset or fueled off. For instance, the CPU uses RAM for the transitory stockpiling of projects and information. 
-    The primary memory that enables projects and information to be stacked for execution. 
-    Temporary (short term or volatile) memory and the contents in it can be overwritten.
-    Holds the program and information that the CPU is at present preparing. 
-    Advantage: by adding more RAM to a PC, the execution of the PC upgrades and more projects can be introduced and keep running in the 
-    meantime. Disadvantage: if power loss happens, all the contents that were stored in the memory are lost.
+    RAM is used as a way of temporarily storing information used by components of a PC.
+  </p>
+  <div class= "wrapper">
+    <ul>
+      <li>Any information within RAM will be lost when a PC is reset or powered off.</li> 
+      <li>For example, the CPU uses RAM for the temporary storage of programs and data.</li> 
+      <li>Temporary memory and the contents in it can be overwritten.</li> 
+      <li>Holds the program and data that the CPU is currently processing.</li>
+    </ul>
+  </div>
+  <p>
+    Advantage: by adding more RAM to a computer, the performance of the computer enhances and more programs can be installed and run 
+    at the same time. 
+  </p>
+  <p>
+    Disadvantage: if power loss occurs, all the contents that were stored in the memory are lost.
   </p>
   <hr>
   <h3>Hard Disk Drive</h3>
@@ -182,11 +185,10 @@
     </figcaption>
   </figure>
   <p>
-    A hard disk drive (HDD), hard disk, hard drive or fixed disk is a data storage device that uses magnetic storage to store and 
-    retrieve digital information using one or more rigid rapidly rotating disks (platters) coated with magnetic material. The platters 
-    are paired with magnetic heads, usually arranged on a moving actuator arm, which read and write data to the platter surfaces. Data 
-    is accessed in a random-access manner, meaning that individual blocks of data can be stored or retrieved in any order and not only 
-    sequentially. HDDs are a type of non-volatile storage, retaining stored data even when powered off.
+    A hard disk drive (HDD) is a data storage device that uses magnetic storage to store and retrieve digital information using one or 
+    more rotating disks coated with magnetic material. The disks are paired with magnetic heads, usually arranged on a moving actuator 
+    arm, which read and write data to the disks' surfaces. Data is accessed in a random-access manner. HDDs are a type of non-volatile 
+    storage, retaining stored data even when powered off.
   </p>
   <hr>
   <h3>Power Supply Unit</h3>
@@ -259,17 +261,14 @@
     programs, and applications, needed to run properly. The hardware has all the physical elements that make the computer work, such 
     as the RAM, CPU, ROM, cache, etc. Let’s imagine a restaurant. Everyday, the keeper comes and makes sure that everything is ready 
     and good to go. The keeper in a computer is the ROM or Read Only Memory, which can’t be modified. To keep everything running 
-    properly in the restaurant, we need an administrator. The administrator is the CPU or central processing unit. The CPU contains 
-    the Arithmetic Logic Unit (ALU) and Control Unit (CU). The ALU in a restaurant would be the manager, who takes care of the numbers
-    and logical part of the job. The CU would be the head chef who organizes the incoming information and gives everyone a task. Let’s 
+    properly in the restaurant, we need an administrator. The administrator is the CPU or central processing unit. Let’s 
     say a customer makes an order. The order would act as input data. A waiter or databus then carries this information to the kitchen. 
     The data then goes through the head chef, who decides where it should go. The kitchen would represent our motherboard. Inside, 
     there is a fridge where we keep everything we use frequently for easy access. This would be called the Random Access Memory or RAM. 
-    There is another type of RAM called cache, but this one would be considered a small recipe book in the kitchen in which the PC 
-    keeps the frequently used instructions. There is also a warehouse with a bigger capacity, which works out to be the hard disk. 
+    There is also a warehouse with a bigger capacity, which works out to be the hard disk. 
     Also, things can be delivered through the backdoor, which could be considered the optical disk in the PC. Imagine that we also have 
     a timer in the kitchen. Every time the timer starts, everyone has to begin preparing the dish and you have to get it done by the 
-    time it reaches zero. This keeps everything synchronized. In the computer, it would be called the internal clock.  When the cooks 
+    time it reaches zero. This keeps everything synchronized. In the computer, it would be called the internal clock. When the cooks 
     prepare the food, this would be the task of the video card in the computer, which would be converting data into images. 
   </p>
   <hr>
