--- a/index.html
+++ b/index.html
@@ -241,18 +241,10 @@
     </figcaption>
   </figure>
   <p>
-    Definition: An optical circle drive (ODD) utilizes a laser light to peruse information from or compose information to an optical 
-    plate. These incorporate Compact discs, DVDs, and Blu-beam circles. This enables you to play music or watch motion pictures 
-    utilizing pre-recorded circles. PC programming likewise frequently goes ahead one of these circles, so you require an optical drive 
-    to introduce programming. Most current drives enable you to keep in touch with an unfilled circle, so you can make your own music 
-    Discs or make a reinforcement duplicate of critical information. 
-  </p>
-  <p>
-    Parts: An optical plate drive utilizes a laser to peruse and compose information. A laser in this setting implies an electromagnetic
-    wave with a particular wavelength inside or close to the obvious light range. Diverse kinds of plates require distinctive 
-    wavelengths. For minimized circles, or Discs, a wavelength of 780 nanometers (nm) is utilized, which is in the infrared range. 
-    For advanced video plates, or DVDs, a wavelength of 650 nm (red) is utilized, while for Blu-beam circles a wavelength of 405 nm 
-    (violet) is utilized. 
+    In computing, an optical disc drive (ODD) is a disk drive that uses laser light or electromagnetic waves as part of the process of 
+    reading or writing data to or from optical discs. Some drives can only read from certain discs. Recently though, drives can both 
+    read and record, but they are called burners or writers. Compact discs, DVDs, and Blu-ray discs are common types of optical media 
+    which can be read and recorded by such drives.
   </p>
   <hr>
   <h3>How Does it all work?</h3>
