--- a/index.html
+++ b/index.html
@@ -249,19 +249,18 @@
   <hr>
   <h3>How Does it all work?</h3>
   <p>
-    A computer has two main parts. The software and hardware. The software has all the instructions, including the operating system, 
-    programs, and applications, needed to run properly. The hardware has all the physical elements that make the computer work, such 
-    as the RAM, CPU, ROM, cache, etc. Let’s imagine a restaurant. Everyday, the keeper comes and makes sure that everything is ready 
-    and good to go. The keeper in a computer is the ROM or Read Only Memory, which can’t be modified. To keep everything running 
-    properly in the restaurant, we need an administrator. The administrator is the CPU or central processing unit. Let’s 
-    say a customer makes an order. The order would act as input data. A waiter or databus then carries this information to the kitchen. 
-    The data then goes through the head chef, who decides where it should go. The kitchen would represent our motherboard. Inside, 
-    there is a fridge where we keep everything we use frequently for easy access. This would be called the Random Access Memory or RAM. 
-    There is also a warehouse with a bigger capacity, which works out to be the hard disk. 
-    Also, things can be delivered through the backdoor, which could be considered the optical disk in the PC. Imagine that we also have 
-    a timer in the kitchen. Every time the timer starts, everyone has to begin preparing the dish and you have to get it done by the 
-    time it reaches zero. This keeps everything synchronized. In the computer, it would be called the internal clock. When the cooks 
-    prepare the food, this would be the task of the video card in the computer, which would be converting data into images. 
+    A computer has two main parts. The software and the hardware. The software has all the instructions, including the operating system, 
+    programs, and applications, needed to run properly. The hardware has all the physical elements that make the computer work. Let’s 
+    imagine a restaurant. Everyday, the owner comes and makes sure that everything is ready. The owner in a computer is the Read Only 
+    Memory (ROM, which can’t be modified). To keep everything running properly in the restaurant, we need a manager or the Central 
+    Processing Unit (CPU). Let’s say a customer makes an order. The order would act as input data. A waiter or databus (in a computer) 
+    then carries this information to the kitchen, or motherboard. The data then goes through the head chef, who decides where it should 
+    go. Inside the kitchen, there is a fridge where we keep everything we use frequently for easy access. This would be called the 
+    Random Access Memory (RAM). There is also a warehouse with a bigger capacity, which works out to be the hard disk. Things can also 
+    be delivered through the backdoor, otherwise known as the optical disk in the PC. Imagine that we also have a timer in the kitchen. 
+    Every time the timer starts, everyone has to begin preparing the dish and you have to get it done by the time it reaches zero. 
+    This keeps everything synchronized. In the computer, it would be called the internal clock. When the cooks prepare the food, this 
+    would be the task of the video card in the computer, which would be converting data into images. 
   </p>
   <hr>
   <h3>Sources</h3>
