--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     </ul>
   </div>
   <hr>
-  <h3>Computer Case</h3>
   <p>
     Let's get started on how the computer looked before we deconstructed it...
   </p>
@@ -40,6 +39,14 @@
     <img src="beforeconstruction.jpg" alt="Before PC Deconstruction">
     <figcaption>
       As you can see, opening the computer case was all we had done prior to this picture being taken.
+    </figcaption>
+  </figure>
+  <hr>
+  <h3>Computer Case</h3>
+  <figure>
+    <img src="afterfinished.jpg" alt="Computer Case">
+    <figcaption>
+      This is what our computer case looked like inside after it was emptied out.
     </figcaption>
   </figure>
   <p>
@@ -218,7 +225,7 @@
     read and write data from a floppy disk, a computer system must have a floppy disk drive.
   </p>
   <figure>
-    <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive and DVD drive">
+    <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive and Optical Disk Drive">
     <figcaption>
       Our computer's Floppy Disk Drive (right) was located right beside the Optical Disk Drive (left).
     </figcaption>
@@ -234,7 +241,7 @@
     The optical disk drive was taken out right after the floppy disk.
   </p>
   <figure>
-    <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive and DVD drive">
+    <img src="DVDdrive.jpg" alt="Optical Disk Drive">
     <figcaption>
       Here is our Optical Disk Drive.
     </figcaption>
