--- a/index.html
+++ b/index.html
@@ -50,26 +50,14 @@
     </figcaption>
   </figure>
   <p>
-    A computer case is the fenced in area that contains the greater part of the components of a computer, such as the RAM and hard drive. 
-    The computer case protects and holds together all the pieces that are mandatory for a computer to function.
+    A computer case is the area that contains the greater components of a computer, such as the RAM and hard drive. 
+    The computer case protects and holds together all the pieces that are mandatory for a computer to function properly.
   </p>
   <hr>
   <h3>Central Processing Unit</h3>
   <p>
     The CPU was one of the first parts our group had managed to pull out of the computer, it is commonly referred to as the "brains" of 
     a computer. The CPU is also known as the processor. The CPU is responsible for executing a program.
-    It is responsible for two things:
-  </p>
-  <div class= "wrapper">
-    <ul>
-      <li>Carrying out commands to make the hardware components perform actions.</li> 
-      <li>Processing data; controls the execution of a computer and which performs basic arithmetic and logical operations.</li> 
-    </ul>
-  </div>
-  <p>
-    Although the instructions performed by the CPU are relatively simple, the CPU can execute many millions of instructions every second. 
-    This is what makes the PC such a powerful tool.
-  </p>
   <figure>
     <img src="floppydiskandCPU.jpg" alt="Central Processing Unit">
     <figcaption>
@@ -77,17 +65,17 @@
     </figcaption>
   </figure>
   <p>
-    The CPU is a scaled down electronic segment that can be alluded to as the mind of the PC. It is in charge of two things: 
+    The CPU is a scaled down electronic segment that can be alluded to as the mind of the PC. It is responsible for two things:
   </p>
   <div class= "wrapper">
     <ul>
-      <li>It creates orders to influence the equipment segments to perform activities.</li> 
-      <li>Processes information; controls the execution of a PC and which performs fundamental math and sensible operations.</li>
+      <li>Carrying out commands to make the hardware components perform actions.</li> 
+      <li>Processing data, it controls the execution of a computer and performs basic arithmetic and logical operations.</li> 
     </ul>
   </div>
   <p>
-    Despite the fact that the directions performed by the CPU are moderately straightforward, the CPU can execute a large number of 
-    guidelines consistently. This is the thing that makes the PC such an intense device. 
+    Although the instructions performed by the CPU are relatively simple, the CPU can execute many millions of instructions every second. 
+    This is what makes the PC such a powerful tool.
   </p>
   <hr>
   <h3>CPU Cooling Fan</h3>
@@ -105,7 +93,7 @@
     A computer fan is any fan inside, or attached to, a computer case used for active cooling. As processors, graphics cards, RAM and 
     other components in computers have increased in speed and power consumption, the amount of heat produced by these components as a 
     side-effect has also increased. These components need to be kept within a specified temperature range to prevent overheating, 
-    instability, malfunction and damage leading to a shortened lifespan.
+    instability, malfunction and damage leading to a shortened lifespan. In our case, we only had a fan for the CPU.
   </p>
   <hr>
   <h3>Motherboard</h3>
@@ -123,8 +111,8 @@
   <p>
     The motherboard holds the CPU, memory chips (RAM and ROM), development spaces, control connectors and some other microchips 
     required for the PC to work. The motherboard is also sometimes referred to as the mainboard, mboard, mobo, mobd, or a rationale load
-    up on Macintosh PCs. The motherboard is a printed circuit board that is the establishment of a PC, situated on the posterior or at 
-    the base of the PC undercarriage. It dispenses control and enables correspondence to the CPU, RAM, and all other PC equipment parts. 
+    up on Macintosh PCs. The motherboard is a printed circuit board that is the establishment of a PC, usually located on the back or at 
+    the base of the computer case. It dispenses control and enables correspondence to the CPU, RAM, and all other PC parts. 
   </p>
   <hr>
   <h3>Riser Card</h3>
@@ -176,11 +164,8 @@
     </ul>
   </div>
   <p>
-    Advantage: by adding more RAM to a computer, the performance of the computer enhances and more programs can be installed and run 
+    By adding more RAM to a computer, the performance of the computer enhances and more programs can be installed and run 
     at the same time. 
-  </p>
-  <p>
-    Disadvantage: if power loss occurs, all the contents that were stored in the memory are lost.
   </p>
   <hr>
   <h3>Hard Disk Drive</h3>
@@ -194,7 +179,7 @@
     A hard disk drive (HDD) is a data storage device that uses magnetic storage to store and retrieve digital information using one or 
     more rotating disks coated with magnetic material. The disks are paired with magnetic heads, usually arranged on a moving actuator 
     arm, which read and write data to the disks' surfaces. Data is accessed in a random-access manner. HDDs are a type of non-volatile 
-    storage, retaining stored data even when powered off.
+    storage, keeping stored data even when powered off.
   </p>
   <hr>
   <h3>Power Supply Unit</h3>
