--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
     </figcaption>
   </figure>
   <p>
-    The power supply is in charge of changing over the approaching power supply to the 5v and 12v DC control that is required by the PC.
-    The 5v supply is utilized to control the circuit sheets on the PC. The 12v supply is utilized to control engine driven gadgets, for 
+    The power supply is in charge of changing over the approaching power supply to the 5V and 12V DC control that is required by the PC.
+    The 5V supply is utilized to control the circuit sheets on the PC. The 12V supply is utilized to control engine driven gadgets, for 
     example, hard drives or Compact disc ROMs. 
   </p>
   <hr>
