--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
   </p>
   <div class= "wrapper">
     <ul>
-      <li>Computer Case (System Unit / Computer Chassis / Tower / Base Unit / Case)</li>
-      <li>Central Processing Unit (CPU / Processor)</li>
-      <li>CPU Cooling Fans</li>
-      <li>Motherboard (Mainboard / System Board / Logicboard / MoBo)</li>
-      <li>Riser Card</li>
-      <li>Riser Cable</li>
-      <li>Random Access Memory (RAM / Memory)</li>
-      <li>Hard Disk Drive (HDD / Hard Drive / Storage)</li>
-      <li>Power Supply Unit (PSU)</li>
-      <li>Floppy Disk Drive (FDD)</li>
-      <li>Optical Disk Drive (ODD / CD/DVD-ROM Drive)</li>
-      <li>How Does It All Work?</li>
+      <li><a href = "#comp">Computer Case (System Unit / Computer Chassis / Tower / Base Unit / Case)</a></li>
+      <li><a href = "#cpu">Central Processing Unit (CPU / Processor)</a></li>
+      <li><a href = "#cpufan">CPU Cooling Fans</a></li>
+      <li><a href = "#mother">Motherboard (Mainboard / System Board / Logicboard / MoBo)</a></li>
+      <li><a href = "#riser">Riser Card</a></li>
+      <li><a href = "#cable">Riser Cable</a></li>
+      <li><a href = "#ram">Random Access Memory (RAM / Memory)</a></li>
+      <li><a href = "#hard">Hard Disk Drive (HDD / Hard Drive / Storage)</a></li>
+      <li><a href = "#power">Power Supply Unit (PSU)</a></li>
+      <li><a href = "#floppy">Floppy Disk Drive (FDD)</a></li>
+      <li><a href = "#optical">Optical Disk Drive (ODD / CD/DVD-ROM Drive)</a></li>
+      <li><a href = "#how">How Does It All Work?</a></li>
     </ul>
   </div>
   <hr>
@@ -42,7 +42,7 @@
     </figcaption>
   </figure>
   <hr>
-  <h3>Computer Case</h3>
+  <h3><a id="comp">Computer Case</a></h3>
   <figure>
     <img src="afterfinished.jpg" alt="Computer Case">
     <figcaption>
@@ -54,7 +54,7 @@
     The computer case protects and holds together all the pieces that are mandatory for a computer to function properly.
   </p>
   <hr>
-  <h3>Central Processing Unit</h3>
+  <h3><a id="cpu">Central Processing Unit</a></h3>
   <p>
     The CPU was one of the first parts our group had managed to pull out of the computer, it is commonly referred to as the "brains" of 
     a computer. The CPU is also known as the processor. The CPU is responsible for executing a program.
@@ -78,7 +78,7 @@
     This is what makes the PC such a powerful tool.
   </p>
   <hr>
-  <h3>CPU Cooling Fan</h3>
+  <h3><a id="cpufan">CPU Cooling Fan</a></h3>
   <p>
     We had already detached the CPU cooling fan, and heatsink, prior to detaching the CPU, it removes the waste heat produced by the 
     CPU, to keep it within permissible operating temperature limits.
@@ -96,7 +96,7 @@
     instability, malfunction and damage leading to a shortened lifespan. In our case, we only had a fan for the CPU.
   </p>
   <hr>
-  <h3>Motherboard</h3>
+  <h3><a id="mother">Motherboard</a></h3>
   <p>
     Although we had managed to take out the CPU quickly, the motherboard took quite a while to detach, 
     it is a printed circuit board that is known as the foundation of a computer. It allocates power and 
@@ -115,7 +115,7 @@
     the base of the computer case. It dispenses control and enables correspondence to the CPU, RAM, and all other PC parts. 
   </p>
   <hr>
-  <h3>Riser Card</h3>
+  <h3><a id="riser">Riser Card</a></h3>
   <p>
     We managed to detach the riser card immediately after pulling out the motherboard, it is a board that 
     plugs into the motherboard and provides additional expansion slots. Because it rises above 
@@ -133,7 +133,7 @@
     (usually an edge connector) on a motherboard and distributes them via dedicated connectors on the card.
   </p>
   <hr>
-  <h3>Riser Cable</h3>
+  <h3><a id="cable">Riser Cable</a></h3>
   <figure>
     <img src="PCIERisercable.jpg" alt="This is the riser cable.">
   </figure>
@@ -142,7 +142,7 @@
     This also allows for more efficient cooling, thereby increasing the life of the cards, as well as possibly running at higher speeds.
   </p>
   <hr>
-  <h3>Random Access Memory (RAM / memory)</h3>
+  <h3><a id="ram">Random Access Memory (RAM / memory)</a></h3>
   <p>
     We only had one stick of RAM.
   </p>
@@ -168,7 +168,7 @@
     at the same time. 
   </p>
   <hr>
-  <h3>Hard Disk Drive</h3>
+  <h3><a id="hard">Hard Disk Drive</a></h3>
   <figure>
     <img src="harddrive1.jpg" alt="Hard Disk Drive">
     <figcaption>
@@ -182,7 +182,7 @@
     storage, keeping stored data even when powered off.
   </p>
   <hr>
-  <h3>Power Supply Unit</h3>
+  <h3><a id="power">Power Supply Unit</a></h3>
   <p>
     The PSU was the last part our group pulled out of the computer, it sends low-voltage power to the 
     internal components of a computer. Modern PCs universally use power supplies with switches. Some power 
@@ -202,7 +202,7 @@
     example, hard drives or Compact disc ROMs. 
   </p>
   <hr>
-  <h3>Floppy Disk Drive</h3>
+  <h3><a id="floppy">Floppy Disk Drive</a></h3>
   <p>
     The FDD was one of the first parts our groups had managed to pull out of the computer, it is a magnetic 
     storage drive for computers. The floppy disk is composed of a thin, flexible magnetic disk sealed in a 
@@ -221,7 +221,7 @@
     read and written by a floppy disk drive (FDD).
   </p>
   <hr>
-  <h3>Optical Disk Drive</h3>
+  <h3><a id="optical">Optical Disk Drive</a></h3>
   <p>
     The optical disk drive was taken out right after the floppy disk.
   </p>
@@ -238,7 +238,7 @@
     which can be read and recorded by such drives.
   </p>
   <hr>
-  <h3>How Does it all work?</h3>
+  <h3><a id="how">How Does it all work?</a></h3>
   <p>
     A computer has two main parts. The software and the hardware. The software has all the instructions, including the operating system, 
     programs, and applications, needed to run properly. The hardware has all the physical elements that make the computer work. Let’s 
